SDIT-1142: 🔒️ Also remove jjwt workaround